# python

./: .gitignore  LICENSE  LICENSE.txt  MANIFEST  MANIFEST.in  README  README.md  ipdata.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
ipdata/: __init__.py  cli.py  codes.py  geofeeds.py  ipdata.py  lolcat.py  test_cli.py  test_ipdata.py
ipdata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ipdata/: __init__.py  cli.py  geofeeds.py  ipdata.py  iptrie.py  test_geofeeds.py  test_ipdata.py  test_iptrie.py
