[metadata]
name = ipdata
version = 4.0.8
author = Jonathan Kosgei
author_email = jonathan@ipdata.co
description = This is the official IPData client library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ipdata/python
project_urls =
    Bug Tracker = https://github.com/ipdata/python/issues
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests
    rich
    click
    click_default_group
    pyperclip
    pytest
    hypothesis
    python-dotenv
    pytricia

[options.entry_points]
console_scripts =
    ipdata = ipdata.cli:cli

[options.packages.find]
where = src